conf_file.script_delim
+ Each ngx_conf_file_t holds its current script delimiter.

darcs-hash:0d9307b4f32dafb6b584f58b66daaec887c21bb4

--- a/config
+++ b/config
@@ -19,6 +19,9 @@ patchcore()
 	p="complex_value_in_http_complex_value"
 	patches="$patches $p"
 	
+	p="delim_init"
+	patches="$patches $p"
+	
 	for p in $patches
 	do
 		patch -p1 < "$ngx_addon_dir/patches/$p.patch" || exit 1
