ngx_conf_s.block_level and .vars
+ Current block's level (server { … }).
+ Current block's var / vals.

darcs-hash:1dd5f4d42e659df9e122abdece6d08f8a39411e6

--- a/config
+++ b/config
@@ -25,6 +25,9 @@ patchcore()
 	p="delim_init"
 	patches="$patches $p"
 	
+	p="block_level"
+	patches="$patches $p"
+	
 	for p in $patches
 	do
 		patch -p1 < "$ngx_addon_dir/patches/$p.patch" || exit 1
