--- a/config
+++ b/config
@@ -19,6 +19,9 @@ patchcore()
 	p="complex_value_in_http_complex_value"
 	patches="$patches $p"
 	
+	p="complex_value_in_set_str_slot"
+	patches="$patches $p"
+	
 	p="complex_value_in_root"
 	patches="$patches $p"
 	
