ngx_conf_script_block_start, ngx_conf_script_block_done: call on BLOCK_START and BLOCK_DONE
= Correctly track were we are.

darcs-hash:a9958a809a5c769e339cb0a525bc6697983c3290

--- a/config
+++ b/config
@@ -31,6 +31,9 @@ patchcore()
 	p="block_level"
 	patches="$patches $p"
 	
+	p="ngx_conf_script_block_start_and_done"
+	patches="$patches $p"
+	
 	for p in $patches
 	do
 		patch -p1 < "$ngx_addon_dir/patches/$p.patch" || exit 1
