complex_value_in_set_str_array_slot
+ To help ssl_certificate and ssl_certificate_key at least.

darcs-hash:166720782d943a750fe1568cefab8dcd8a360b57

--- a/config
+++ b/config
@@ -22,6 +22,9 @@ patchcore()
 	p="complex_value_in_set_str_slot"
 	patches="$patches $p"
 	
+	p="complex_value_in_set_str_array_slot"
+	patches="$patches $p"
+	
 	p="complex_value_in_root"
 	patches="$patches $p"
 	
