complex_value_in_server_name
+ Should be useful.

darcs-hash:65904c95c53c725b54d311157eb7da44d29ee3e4

--- a/config
+++ b/config
@@ -28,6 +28,9 @@ patchcore()
 	p="complex_value_in_root"
 	patches="$patches $p"
 	
+	p="complex_value_in_server_name"
+	patches="$patches $p"
+	
 	p="delim_init"
 	patches="$patches $p"
 	
