--- a/config
+++ b/config
@@ -4,7 +4,7 @@ ngx_addon_name=ngx_conf_script
 
 ngx_module_name=ngx_conf_script_module
 ngx_module_type=CORE
-ngx_module_srcs="$ngx_addon_dir/ngx_conf_def.c $ngx_addon_dir/ngx_conf_script_module.c"
+ngx_module_srcs="$ngx_addon_dir/ngx_conf_def.c $ngx_addon_dir/ngx_conf_script_module.c $ngx_addon_dir/ngx_conf_script_functions.c"
 ngx_module_incs="$ngx_addon_dir"
 ngx_module_deps="$ngx_addon_dir/ngx_conf_def.h"
 . auto/module
